# ckan-hk

./: README.md  pyproject.toml
.github/workflows/: publish-pypi-package.yaml  tests.yaml
src/hkckan/: package.py
tests/: test_package.py
