[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hkckan"
version = "0.0.4"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A Python library that provides a simple and intuitive interface to interact with the Comprehensive Knowledge Archive Network (CKAN) API, operated by data.gov.hk"

readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]
dependencies = [
  "requests >= 2.32"
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
